=================================

Ver.1.0.6 === will be next release.

Ver.1.0.5 (2012/2/5)
- Authentication support first appearance!
  * Before checking this, you should re-import MySQL's schema file 'sample_shchema.txt'.
  * Open develop-im/index.html and click to the relevant link of 'Sample Portal Page'.
  * Try username 'user1' and password 'user1', and try other arbitarily terms.

Ver.1.0.4 (2012/1/28)
- So many renaming for refactoring.
- INTERMediatorCheckBrowse() function was moved to INTERMediatorOnPage.INTERMediatorCheckBrowser().
- Bug fix for INTERMediatorLib.numberFormat().

Ver.1.0.3 (2012/1/25)
- DB_FileMaker_FX.php's warning is fixed.
- INTERMEdiatorLib.numberFormat(str,digit) support the "digit" parameter to specify how many digits after period.
- The message in case of someone modify the field after loading is updated clearer.
- Confirming before insert/delete records. 'repeat-control' => 'confirm-delete comfirm-insert' are supported.

Ver.1.0.2 (2011/12/4)
- PDO data access class can specify OR condition from JS program.
- Bug fix for conditions.
- 'transaction' =>'none' is supported. If it's specified, "Save" button will be appear in the navigation.
  This option causes batch saving. The field data will not be sent without clicking "Save" button.
- The return value of the db_query function is modified.
- Support the repeater nodes for 0 record is returned.
  The repeater node having the "_im_for_noresult" class is used for that.
- Ignoring enclosure/repeater for table or list. It could do by adding the class "_im_ignore_enc_rep".

Ver.1.0.1 (2011/11/19)
- Fix the issue to erase "Return" in text on FileMaker Server.
- Sample pages css is changed and they looks better.
- Support INTERMediator.additionalSortKey property to add sort keys with JS program.
- Modified the Sample Search Page,and it's better behavior.
- Change the URL of the page footer to inter-mediator.info.

Ver.0.7.7 -> 1.0.0 (2011/10/19)