@@ -4,8 +4,13 @@ msyk@msyk.net
 
 This is the root of INTER-Mediator source repository.
 
+INTER-Mediator is new style web application framework.
+You could develop easily, and realize your ideals.
+You just describe table and field names in any HTML elements.
+If you want to implement more complex logic, you could write progarms both client and server sides.
+
 All information will show at: 
-http://msyk.net/im
+http://inter-mediator.info/
 
 Sample pages with this archived file are published at below.
 You don't have to deploy the samples if you just want to just a glance.
